* Updated stable to 1.26.1
* Updated mainline to 1.27.0
* Updated openssl to 1.0.2u
* Removed pagespeed module support

* Updated from 1.9.12 --> 1.9.13
* added --with-http_stub_status_module

* Updated v1.9.x script to 1.9.12
* Added support for RHEL/Centos
* Bug fixes

* Initalized Project
* Created Script
* Made v1.8.x script
* Made v1.9.x script